--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,8 @@
-html,
+html{
+  height: 100%;
+}
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -10,7 +13,9 @@ a {
   color: inherit;
   text-decoration: none;
 }
-
+#__next {
+  height: 100%;
+}
 * {
   box-sizing: border-box;
 }
